refactor: enhance null safety and clean up code in various classes